--- a/pom.xml
+++ b/pom.xml
@@ -120,11 +120,11 @@
         </dependency>
     </dependencies>
     <distributionManagement>
-        <snapshotRepository>
+        <repository>
             <id>central</id>
             <name>zabbix-server-dts-ssd.novalocal-releases</name>
             <url>http://103.56.158.144:8081/artifactory/libs-release-local</url>
-        </snapshotRepository>
+        </repository>
     </distributionManagement>
     <build>
         <plugins>
