--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.zerhusen</groupId>
     <artifactId>jwt-spring-security-swagger</artifactId>
-    <version>0.2.0</version>
+    <version>2.0-SNAPSHOTS</version>
     <packaging>jar</packaging>
 
     <name>jwt-spring-security-swagger</name>
@@ -119,6 +119,13 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>zabbix-server-dts-ssd.novalocal-snapshots</name>
+            <url>http://103.56.158.144:8081/artifactory/libs-snapshot-local</url>
+        </snapshotRepository>
+    </distributionManagement>
     <build>
         <plugins>
             <plugin>
@@ -182,7 +189,7 @@
                                 <manifestEntries>
                                     <Implementation-Title>${project.name}</Implementation-Title>
                                     <Implementation-Vendor>Luca Merello</Implementation-Vendor>
-                                    <Implementation-Version>${project.version}.${buildNumber}</Implementation-Version>
+                                    <Implementation-Version>${buildNumber}.${project.version}</Implementation-Version>
                                 </manifestEntries>
                             </manifestSection>
                             <manifestSection>
@@ -196,7 +203,7 @@
                             </manifestSection>
                         </manifestSections>
                     </archive>
-                    <finalName>${project.artifactId}/${artifactId}-${project.version}.${buildNumber}</finalName>
+                    <finalName>${project.artifactId}/${artifactId}-${buildNumber}.${project.version}</finalName>
                 </configuration>
             </plugin>
  
@@ -257,12 +264,12 @@
                         </goals>
                         <phase>install</phase>
                         <configuration>
-                            <file>${project.build.directory}/${project.artifactId}/${artifactId}-${project.version}.${buildNumber}.${project.packaging}</file>
+                            <file>${project.build.directory}/${project.artifactId}/${artifactId}-${buildNumber}.${project.version}.${project.packaging}</file>
                             <sources>${project.build.directory}/${project.build.finalName}-sources.${project.packaging}</sources>
                             <javadoc>${project.build.directory}/${project.build.finalName}-javadoc.${project.packaging}</javadoc>
                             <generatePom>false</generatePom>
                             <pomFile>pom.xml</pomFile>
-                            <version>${project.version}.${buildNumber}</version>
+                            <version>${buildNumber}.${project.version}</version>
                         </configuration>
                     </execution>
                 </executions>
@@ -285,8 +292,8 @@
                         <phase>deploy</phase>
                         <configuration>
                             <repositoryId>release-libs</repositoryId>
-                            <url>http://103.56.158.144:8081/artifactory/libs-release-local/</url>
-                            <file>${project.build.directory}/${project.artifactId}/${artifactId}-${project.version}.${buildNumber}.${project.packaging}</file>
+                            <url>http://103.56.158.144:8081/artifactory/libs-snapshot-local</url>
+                            <file>${project.build.directory}/${project.artifactId}/${artifactId}-${buildNumber}.${project.version}.${project.packaging}</file>
                             <sources>${project.build.directory}/${project.build.finalName}-sources.${project.packaging}</sources>
                             <javadoc>${project.build.directory}/${project.build.finalName}-javadoc.${project.packaging}</javadoc>
                             <generatePom>false</generatePom>
