--- a/pom.xml
+++ b/pom.xml
@@ -203,7 +203,7 @@
                             </manifestSection>
                         </manifestSections>
                     </archive>
-                    <finalName>${project.artifactId}/${artifactId}-${buildNumber}.${project.version}</finalName>
+                    <finalName>${project.artifactId}/${artifactId}.${project.version}</finalName>
                 </configuration>
             </plugin>
  
@@ -264,7 +264,7 @@
                         </goals>
                         <phase>install</phase>
                         <configuration>
-                            <file>${project.build.directory}/${project.artifactId}/${artifactId}-${buildNumber}.${project.version}.${project.packaging}</file>
+                            <file>${project.build.directory}/${project.artifactId}/${artifactId}.${project.version}.${project.packaging}</file>
                             <sources>${project.build.directory}/${project.build.finalName}-sources.${project.packaging}</sources>
                             <javadoc>${project.build.directory}/${project.build.finalName}-javadoc.${project.packaging}</javadoc>
                             <generatePom>false</generatePom>
@@ -293,7 +293,7 @@
                         <configuration>
                             <repositoryId>release-libs</repositoryId>
                             <url>http://103.56.158.144:8081/artifactory/libs-snapshot-local</url>
-                            <file>${project.build.directory}/${project.artifactId}/${artifactId}-${buildNumber}.${project.version}.${project.packaging}</file>
+                            <file>${project.build.directory}/${project.artifactId}/${artifactId}.${project.version}.${project.packaging}</file>
                             <sources>${project.build.directory}/${project.build.finalName}-sources.${project.packaging}</sources>
                             <javadoc>${project.build.directory}/${project.build.finalName}-javadoc.${project.packaging}</javadoc>
                             <generatePom>false</generatePom>
