--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
                                 <manifestEntries>
                                     <Implementation-Title>${project.name}</Implementation-Title>
                                     <Implementation-Vendor>Luca Merello</Implementation-Vendor>
-                                    <Implementation-Version>${buildNumber}.${project.version}</Implementation-Version>
+                                    <Implementation-Version>${project.version}</Implementation-Version>
                                 </manifestEntries>
                             </manifestSection>
                             <manifestSection>
@@ -269,7 +269,7 @@
                             <javadoc>${project.build.directory}/${project.build.finalName}-javadoc.${project.packaging}</javadoc>
                             <generatePom>false</generatePom>
                             <pomFile>pom.xml</pomFile>
-                            <version>${buildNumber}.${project.version}</version>
+                            <version>.${project.version}</version>
                         </configuration>
                     </execution>
                 </executions>
@@ -298,7 +298,7 @@
                             <javadoc>${project.build.directory}/${project.build.finalName}-javadoc.${project.packaging}</javadoc>
                             <generatePom>false</generatePom>
                             <pomFile>pom.xml</pomFile>
-                            <version>${project.version}.${buildNumber}</version>
+                            <version>${project.version}.</version>
                         </configuration>
                     </execution>
                 </executions>
