--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.zerhusen</groupId>
     <artifactId>jwt-spring-security-swagger</artifactId>
-    <version>2.0-SNAPSHOTS</version>
+    <version>2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>jwt-spring-security-swagger</name>
