--- a/pom.xml
+++ b/pom.xml
@@ -122,8 +122,8 @@
     <distributionManagement>
         <snapshotRepository>
             <id>snapshots</id>
-            <name>zabbix-server-dts-ssd.novalocal-snapshots</name>
-            <url>http://103.56.158.144:8081/artifactory/libs-snapshot-local</url>
+            <name>DESKTOP-B3MC8P9-snapshots</name>
+            <url>http://localhost:8081/artifactory/libs-snapshot-local</url>
         </snapshotRepository>
     </distributionManagement>
     <build>
