--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.zerhusen</groupId>
     <artifactId>jwt-spring-security-swagger</artifactId>
-    <version>2.1-SNAPSHOT</version>
+    <version>2.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>jwt-spring-security-swagger</name>
@@ -197,7 +197,7 @@
                                 <manifestEntries>
                                     <Built-By>${user.name}</Built-By>
                                     <Built-OS>${os.name}</Built-OS>
-                                    <Build-Date>${maven.build.timestamp}</Build-Date>
+                                    <!--<Build-Date>${maven.build.timestamp}</Build-Date>-->
                                     <Class-Path>.</Class-Path>
                                 </manifestEntries>
                             </manifestSection>
