--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
         <tag>HEAD</tag>
     </scm>
 
+    <distributionManagement>
+        <repository>
+            <id>central</id>
+            <name>DESKTOP-B3MC8P9-releases</name>
+            <url>http://localhost:8081/artifactory/libs-release-local</url>
+        </repository>
+    </distributionManagement>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -271,7 +279,7 @@
                 </configuration>
             </plugin>
  
-            <!--Deploy on remote repository--> 
+            <!--            Deploy on remote repository 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
@@ -298,8 +306,8 @@
                 <configuration>
                     <skip>true</skip>
                 </configuration>
-            </plugin>
-<!--            <plugin>
+            </plugin>-->
+            <!--            <plugin>
                 <groupId>org.jfrog.buildinfo</groupId>
                 <artifactId>artifactory-maven-plugin</artifactId>
                 <version>2.6.1</version>
